gccida/c1/get_frame_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_frame_alias_set/src/alias.c:1186:6: error: use of undeclared identifier 'get_frame_alias_set_set'; did you mean 'get_frame_alias_set'?
if ( get_frame_alias_set_set == -1 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~
     get_frame_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_frame_alias_set/src/alias.c:1184:10: note: 'get_frame_alias_set' declared here
__int64  get_frame_alias_set( ) 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_frame_alias_set/src/alias.c:1187:1: error: use of undeclared identifier 'get_frame_alias_set_set'
get_frame_alias_set_set = new_alias_set( ); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_frame_alias_set/src/alias.c:1188:8: error: use of undeclared identifier 'get_frame_alias_set_set'; did you mean 'get_frame_alias_set'?
return get_frame_alias_set_set; 
       ^~~~~~~~~~~~~~~~~~~~~~~
       get_frame_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_frame_alias_set/src/alias.c:1184:10: note: 'get_frame_alias_set' declared here
__int64  get_frame_alias_set( ) 
         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_frame_alias_set/src/obj/alias.o] Error 1
